# biopath

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: index.rs  io_util.rs  main.rs  query.rs  statistics.rs
test_files/: tiny1.query  tiny1.query_out
