[package]
name = "biopath"
description = "Shortest paths in biological overlap graphs with or without indexing."
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/biopath"
version = "0.1.2"

edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive"] }
log = "0.4.29"
simplelog = "0.12.2"
anyhow = "1.0.102"
indicatif = "0.18.4"

# Data structures
spqr-shortest-path-index = { version = "0.2.2", features = ["binary-io"] }
bidirected-adjacency-array = "0.3.0"
spqr-tree = { version = "0.3.2" }

# Serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"

# Other
itertools = "0.14.0"
flate2 = "1.1.9"
